Name:                Garmin
Version:             0.1
Synopsis:            Build Garmin img files
Description:         Build Garmin img files
Category:            Utils
Author:              Tony Morris
Maintainer:          tmorris@tmorris.net
Copyright:           2009 Tony Morris
build-type:          Simple
cabal-version:       >= 1.2

Flag small_base
  Description:     Choose the new, split-up base package.

Library
  if flag(small_base)
    Build-Depends: base < 4 && >= 3, bytestring, directory, filepath, process, time
  else
    Build-Depends: base < 3, filepath, process, time

  GHC-Options:    -Wall
  Exposed-Modules: Geo.Garmin
                   Main