Name:                OsmGarmin
Version:             0.0.2
Synopsis:            Build Garmin img files
Description:         Build Garmin img files
Category:            Utils
Homepage:            https://github.com/tonymorris/osmgarmin
Author:              Tony Morris
Maintainer:          tmorris@tmorris.net
Copyright:           2011 Tony Morris
Build-Type:          Simple
Cabal-Version:       >= 1.2

Flag small_base
  Description:       Choose the new, split-up base package.

Executable           osmgarmin
  Main-Is:           Main.hs
  
  Build-Depends:     base < 5 && >= 3, time, filepath, directory, process

  Hs-Source-Dirs:    src, .

  GHC-Options:       -Wall

  Other-Modules:     Geo.Garmin

