name:               osmgarmin
version:            0.0.3
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
copyright:          Copyright (C) 2010-2013 Tony Morris
synopsis:           Build Garmin img files
category:           Data
description:        Build Garmin img files
homepage:           https://github.com/tonymorris/osmgarmin
bug-reports:        https://github.com/tonymorris/osmgarmin/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/osmgarmin.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                      base >= 3   && < 5
                    , time >= 1.5
                    , filepath >= 1.4
                    , directory >= 1.2
                    , process >= 1.2
                    , sys-process >= 0.1.4
                    , lens >= 4.0
                    , notzero >= 0.0.10
                    , transformers >= 0.4
   
  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Geo.Garmin

executable          osmgarmin
  main-is:          
                    Main.hs

  default-language:
                    Haskell2010

  build-depends:
                      base >= 3   && < 5
                    , time >= 1.5
                    , filepath >= 1.4
                    , directory >= 1.2
                    , process >= 1.2
                    , sys-process >= 0.1.4
                    , lens >= 4.0
                    , notzero >= 0.0.10
                    , transformers >= 0.4

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  other-modules:    
                    Geo.Garmin

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
